--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -3,13 +3,28 @@ $colors: (
     normal: #6516DD,
     hover: #5007C0,
     active: #4000A1,
-    disabled: #C5A5F4
+    disabled: #C5A5F4,
+    shade-one: #323232,
+    shade-two: #767676,
+    shade-three: #A5A5A5,
+    shade-four: #CACACA,
+    shade-five: #DBDBDB,
+    shade-size: #E8E8E8,
+    shade-seven: #F3F3F3,
+    shade-eight: #FFF
   ),
   secondary: (
     normal: #B327BF,
     hover: #A107C0,
     active: #8804A3,
-    disabled: #F4A5CD
+    disabled: #F4A5CD,
+    shade-one: #11151F,
+    shade-two: #2C354D,
+    shade-three: #8895A7,
+    shade-four: #B8C4CE,
+    shade-five: #CFD6DE,
+    shade-six: #E1E7ED,
+    shade-seven: #F8F9FA
   ),
   cancel: (
     normal: #F3F3F3,
