--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -45,3 +45,11 @@ $colors: (
     disabled: #9EDCD0
   )
 );
+
+@function color($key) {
+  @if map-has-key($colors, $key) {
+    @return map-get($colors, $key);
+  }
+  @warn 'Unknown `#{$key}` in $colors.';
+  @return null;
+}
