Clean up reuse patterns for weights, families and sizes

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,3 @@
-$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-
-
-$gray: #323232;
-
 @import '_theme';
+@import '_functions';
+
