--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -1,3 +1,13 @@
+$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+$font-families: (
+  default: $font-family
+);
+
+$font-weights: (
+  bold: 700
+);
+
 $colors: (
   primary: (
     normal: #6516DD,
@@ -46,10 +56,4 @@ $colors: (
   )
 );
 
-@function color($key) {
-  @if map-has-key($colors, $key) {
-    @return map-get($colors, $key);
-  }
-  @warn 'Unknown `#{$key}` in $colors.';
-  @return null;
-}
+
