Mock example of css custom properties approach to themeing

--- a/src/scss/_functions.scss
+++ b/src/scss/_functions.scss
@@ -24,3 +24,8 @@
   @warn 'Unknown `#{$key}` in $font-weight.';
   @return null;
 }
+
+@mixin variable($property, $variable, $fallback) {
+  #{$property}: $fallback;
+  #{$property}: var($variable);
+}
