restructure, components stubbed in

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -1,7 +1,9 @@
-$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$font-default: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$font-secondary: 'Roboto Mono', monospace;
 
 $font-families: (
-  default: $font-family
+  default: $font-default,
+  secondary: $font-secondary
 );
 
 $font-weights: (
