--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -17,8 +17,10 @@ $font-sizes: (
 );
 
 $spacing-base: 10px;
+$spacing-double: $spacing-base * 2;
+$spacing-triple: $spacing-base * 3;
 
-$input-padding: $spacing-base * 2;
+$input-padding: $spacing-double;
 
 :root, .apos-theme-light {
   --primary: #6516DD;
