--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -10,6 +10,10 @@ $font-weights: (
   bold: 700
 );
 
+$font-sizes: (
+  meta: 12px
+);
+
 :root, .apos-theme-light {
   --primary: #6516DD;
   --primary-hover: #5007C0;
