--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -1,6 +1,11 @@
 $font-default: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $font-secondary: 'Roboto Mono', monospace;
 
+body {
+  font-family: $font-default;
+  font-size: 10px;
+}
+
 $font-families: (
   default: $font-default,
   secondary: $font-secondary
