Styles outer overlay modal and sets up first slots

--- a/src/scss/_inputs.scss
+++ b/src/scss/_inputs.scss
@@ -10,7 +10,7 @@
 .apos-input {
   min-width: 460px;
   max-width: 100%;
-  border: 1px solid var(--neutral-five);
+  border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
   background: var(--neutral-seven);
   color: var(--neutral-one);
