Adds breadcrumbs to modal

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -69,6 +69,8 @@ $boolean-padding: $spacing-double;
   --border-radius: 5px;
   --box-shadow: 0 3px 13px 4px rgba(0,0,0,0.08);
   --background-color: #FFF;
+  --background-alt: #323232;
+  --text-alt: #FFF;
 }
 
 .apos-theme-dark {
