Prevents active boolean border change

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -68,7 +68,7 @@ $boolean-padding: $spacing-double;
 
   // Text colors
   --text-primary: #323232;
-  --text-light: #FFF;
+  --text-light: #fff;
 
   // Borders
   --border-color: #DBDBDB;
