--- a/src/scss/_storybook.scss
+++ b/src/scss/_storybook.scss
@@ -4,5 +4,5 @@ html, body {
 }
 
 .apos-theme-dark {
-  background-color: var(--modal-background-color);
+  background-color: var(--background-primary);
 }
