--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -33,65 +33,64 @@ $boolean-padding: $spacing-double;
 
 :root, .apos-theme-light {
 
-  --danger: #EB443B;
-  --success: #00BF9A;
-  --warning: #FFCE00;
-  --info: #DBDBDB;
-  --primary: #6516DD;
+  --a-danger: #EB443B;
+  --a-success: #00BF9A;
+  --a-warning: #FFCE00;
+  --a-primary: #6516DD;
   
-  --primary-button-hover: #5007C0;
-  --primary-button-active: #4000A1;
-  --primary-button-disabled: #C5A5F4;
+  --a-primary-button-hover: #5007C0;
+  --a-primary-button-active: #4000A1;
+  --a-primary-button-disabled: #C5A5F4;
 
-  --danger-button-hover: #C00717;
-  --danger-button-active: #A10000;
-  --danger-button-disabled: #FF9D98;
+  --a-danger-button-hover: #C00717;
+  --a-danger-button-active: #A10000;
+  --a-danger-button-disabled: #FF9D98;
 
-  --neutral-one: #323232;
-  --neutral-two: #494949;
-  --neutral-three: #606060;
-  --neutral-four: #767676;
-  --neutral-five: #8D8D8D;
-  --neutral-six: #A4A4A4;
-  --neutral-seven: #BBBBBB;
-  --neutral-eight: #D1D1D1;
-  --neutral-nine: #E8E8E8;
-  --neutral-ten: #FFFFFF;
+  --a-base-1: #323232;
+  --a-base-2: #494949;
+  --a-base-3: #606060;
+  --a-base-4: #767676;
+  --a-base-5: #8D8D8D;
+  --a-base-6: #A4A4A4;
+  --a-base-7: #BBB;
+  --a-base-8: #D1D1D1;
+  --a-base-9: #E8E8E8;
+  --a-base-10: #FFF;
 
-  --text-primary: #000;
+  --a-text-primary: #000;
 
   // Borders
-  --border-radius: 5px;
-  --box-shadow: 0 3px 13px 4px rgba(0,0,0,0.08);
+  --a-border-radius: 5px;
+  --a-box-shadow: 0 3px 13px 4px rgba(0,0,0,0.08);
 
   // Backgrounds
-  --background-primary: #fff;
-  --background-inverted: #323232;
-  --overlay: #00000080;
+  --a-background-primary: #fff;
+  --a-background-inverted: #323232;
+  --a-overlay: #00000080;
 
   // Universal
-  --white: #fff;
+  --a-white: #fff;
 }
 
 .apos-theme-dark {
-  --primary: #0562FF;
-  --primary-button-hover: #014FD3;
-  --primary-button-active: #0443AF;
-  --primary-button-disabled: #6BA1FE;
+  --a-primary: #0562FF;
+  --a-primary-button-hover: #014FD3;
+  --a-primary-button-active: #0443AF;
+  --a-primary-button-disabled: #6BA1FE;
 
-  --neutral-one: #F8F9FA;
-  --neutral-two: #E1E3E7;
-  --neutral-three: #CBCDD4;
-  --neutral-four: #B4B8C0;
-  --neutral-five: #9DA2AD;
-  --neutral-six: #878C9A;
-  --neutral-seven: #707687;
-  --neutral-eight: #596173;
-  --neutral-nine: #434B60;
-  --neutral-ten: #2C354D;
+  --a-base-1: #F8F9FA;
+  --a-base-2: #E1E3E7;
+  --a-base-3: #CBCDD4;
+  --a-base-4: #B4B8C0;
+  --a-base-5: #9DA2AD;
+  --a-base-6: #878C9A;
+  --a-base-7: #707687;
+  --a-base-8: #596173;
+  --a-base-9: #434B60;
+  --a-base-10: #2C354D;
 
-  --background-primary: #11151F;
-  --overlay: #11151F90;
+  --a-background-primary: #11151F;
+  --a-overlay: #11151F90;
 
-  --text-primary: #fff;
+  --a-text-primary: #fff;
 }
