adds waiting state for buttons and mocks in a test into sotyrbook, refactors to button component to be named in line with other AposComponents

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -70,6 +70,13 @@ $boolean-padding: $spacing-double;
 
   // Universal
   --a-white: #fff;
+
+  // Apostrophe brand
+  --a-brand-red: #EA433A;
+  --a-brand-gold: #CC9300;
+  --a-brand-magenta: #B327BF;
+  --a-brand-blue: #6666FF;
+  --a-brand-green: #00BF9A;
 }
 
 .apos-theme-dark {
