active and hover states for bools

--- a/src/scss/_inputs.scss
+++ b/src/scss/_inputs.scss
@@ -31,6 +31,7 @@
     outline: none;
     box-shadow: 0 0 3px var(--a-base-2);
     border-color: var(--a-base-2);
+    background-color: var(--a-base-10);
   }
 
   &[disabled] {
