--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -80,24 +80,24 @@ $boolean-padding: $spacing-double;
 }
 
 .apos-theme-dark {
-  --a-primary: #0562FF;
+  --a-primary: #5e6ad2;
   --a-primary-button-hover: #014FD3;
   --a-primary-button-active: #0443AF;
   --a-primary-button-disabled: #6BA1FE;
 
-  --a-base-1: #F8F9FA;
-  --a-base-2: #E1E3E7;
-  --a-base-3: #CBCDD4;
-  --a-base-4: #B4B8C0;
-  --a-base-5: #9DA2AD;
-  --a-base-6: #878C9A;
-  --a-base-7: #707687;
-  --a-base-8: #596173;
-  --a-base-9: #434B60;
-  --a-base-10: #2C354D;
+  --a-base-1: #B4B8C0;
+  --a-base-2: #A3A7AF;
+  --a-base-3: #93969D;
+  --a-base-4: #82858C;
+  --a-base-5: #71747A;
+  --a-base-6: #616369;
+  --a-base-7: #505257;
+  --a-base-8: #3F4146;
+  --a-base-9: #2F3034;
+  --a-base-10: #1E1F23;
 
-  --a-background-primary: #11151F;
-  --a-overlay: #11151F90;
+  --a-background-primary: #0b0b0c;
+  --a-overlay: #0b0b0c90;
 
   --a-text-primary: #fff;
 }
