--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -21,7 +21,8 @@ $font-sizes: (
   input: 12px,
   input-hint: 12px,
   heading: 22px,
-  modal: 12px
+  modal: 12px,
+  rail-title: 14px
 );
 
 $spacing-base: 10px;
